Closed Bug 1354013 Opened 8 years ago Closed 8 years ago

Creating customized built-in elements without relevant definitions registered first shouldn't throw NotFoundError

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: edgar, Assigned: edgar)

References

()

Details

(Whiteboard: dom-ce-m2)

Attachments

(1 file)

but create an element that could be upgraded later. See https://github.com/w3c/webcomponents/issues/608.
Whiteboard: dom-ce-m2
Attachment #8859953 - Flags: review?(wchen) → review+
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/448fa97e5193 Creating customized built-in elements without relevant definitions registered first shouldn't throw NotFoundError; r=wchen
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: