Bug 1354013 - Creating customized built-in elements without relevant definitions registered first shouldn't throw NotFoundError; r=wchen

per spec change: https://github.com/w3c/webcomponents/issues/608

MozReview-Commit-ID: 3W4qTndQsP7